kubernetes/apps/ai-system/azure-openai-eastus2-images/app/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: azure-openai-eastus2-images
spec:
  parentRefs:
    - name: agentgateway
      namespace: kgateway-system
  hostnames:
    - "llms.matherly.net"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /azure/eastus2/images
      backendRefs:
        - group: agentgateway.dev
          kind: AgentgatewayBackend
          name: azure-openai-eastus2-images
          namespace: ai-system
